# Micrsoft-SEAL-benchmarks

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bfv_ct  bfv_pt  bgv_ct  bgv_pt  ckks_ct  ckks_pt  cmake_install.cmake  compile_commands.json  parse.go  sealproject
src/: main.cpp
